区分敌我，默认不开启队友伤害，敌人坦克随机发射子弹

--- a/doc/00课程简介.md
+++ b/doc/00课程简介.md
@@ -1,7 +1,12 @@
 #1、学习计划
-    坦克一期 + 坦克二期 + 设计模式 + 网络编程 大约有80个小时视频
+    坦克一期 + 坦克二期 + 设计模式 + 网络编程 + swing 大约有80个小时视频
     预计35天完成
     
-    2020年 10.17开始
-    预计到2020年 11.20号学完
-#2、
+    2020年 10.17开始，预计到2020年 11.20号学完
+#2、项目介绍
+    设计知识点：
+        netty server
+        socket
+        swing
+        设计模式
+        
