--- a/doc/01坦克第一个版本.md
+++ b/doc/01坦克第一个版本.md
@@ -1,42 +1,54 @@
-#1、认识Frame类
-    窗口类
-    setVisible(true) 使窗口可以显示出来。
-    setTitle 设置标题
-    addWindowListener 可以关闭它
-#2、从Frame类继承
-    重写frame里的方法
-        paint方法 窗口需要重新绘制时候，被系统自动调用
+#1、演变流程
+    1、认识Frame类
+        带有标题和边框的顶层窗口
+            
+        setVisible(true) 使窗口可以显示出来。
+        setTitle 设置标题
+        addWindowListener 可以关闭它
         
-    Graphics 相当于一只画笔
-    
-    将坦克坐标定位变量，在paint中改变变量值，paint被调用后，黑窗口就会动起来。
-    
-    自动刷新
-        摁一个键，自动刷新。
-            addKeyListener  给窗口添加键盘监听。
-            在主线程每隔50ms调用repaint方法 重新绘制窗口。
-        开一个线程自动刷新。
-    
-#3、day02
-    如何定义主战坦克的方向
-        Enum Dir
-    根据按键改变主战坦克方向
-        setMainTankDir()
-        根据方向进行坦克的移动
-    怎么 样处理坦克静止状态
-        moving = false;
-    想象如何给出更多坦克，以及子弹
-        将坦克封装成类，理解面向对象设计中“封装”的思想
-    用双缓冲解决闪烁问题（不重要）
-        repaint - update
-        截获update
-        首先把该画出来的东西（坦克， 子弹）先画在内存的图片中，图片大小和游戏画面一致
-        把内存中图片一次性画到屏幕上（内存的内容复制到显存）
-    打出一颗子弹
-        按下Ctrl键，主战坦克打出一颗子弹
-        用面向对象的思想考虑
-    打出一串子弹
-        将子弹装在容器中
-#3、碰撞检测
-    子弹击中坦克
-    在每一次坦克和子弹 paint时候都需要检测
+    2、画出tank 
+        从Frame类继承，并且重写paint方法，画出一个黑方块
+        重写frame里的paint方法
+             窗口需要重新绘制时候，被系统自动调用.
+            
+        Graphics 相当于一只画笔
+        
+    3、坦克移动（手动）
+        将坦克坐标定位变量，
+        在paint中改变变量值，paint被调用后，黑窗口就会动起来。
+        
+    4、添加键盘监听事件
+        将构造坦克 放到构造器里。
+        
+    5、让tank 自动移动
+        在主线程每隔50ms刷新窗口，调用repaint()方法，
+        repaint()会自动调用paint(g)
+    6、让tank 根据上下左右键 来移动
+        添加键盘处理，根据上下左右箭头的按键状态，判定坦克的移动方向
+        定义坦克方向的enum，根据按键状态确定坦克方向，根据坦克方向确定坦克位移
+    7、抽象出坦克类，
+        封装相应的属性和方法，在tankFrame中直接调用
+        
+    8、添加坦克静止的处理
+        添加坦克静止的处理，只要四个键都没有按下去，坦克就是静止的
+        
+    9、定义子弹类，
+        设定属性和方法，new出一颗新的子弹，在屏幕上画出来
+        
+        利用双缓冲，消除闪烁
+            在内存中加载完成，在拷贝到显存中。
+            
+    10、按下ctrl键，tank会fire出一颗子弹
+        监听control键，按下。调用tank.fire()方法。
+        tankframe里持有子弹list，每次tank.fire()时候，给list add一颗子弹
+        
+        飞出边界，从list中移出子弹
+            移出列表的内存泄漏问题，小心处理迭代器中的删除问题，
+                1：使用普通方式迭代 
+                2：在迭代过程中删除（iterator.remove）
+    10、
+    10、
+    10、
+    3、碰撞检测
+        子弹击中坦克
+        在每一次坦克和子弹 paint时候都需要检测
