--- a/doc/00课程简介.md
+++ b/doc/00课程简介.md
@@ -11,3 +11,16 @@
         设计模式
 #3、作业
     贪吃蛇，打飞机。泡泡堂。等小游戏。
+    
+#4、java中AWT和SWing的区别与联系
+    AWT的图形函数与操作系统提供的图形函数有着一一对应的关系。
+    
+    不同的操作系统其图形库的功能可能不一样，AWT牺牲功能来实现平台无关性。
+    因此，AWT 的图形功能是各操作系统图形功能的“交集”。
+    
+    因为AWT是依靠本地方法来实现功能的，所以AWT控件称为“重量级控件”。 
+    
+    AWT和Swing之间的区别：
+       1)AWT 是基于本地方法的C/C++程序，其运行速度比较快；Swing是基于AWT的Java程序，其运行速度比较慢。
+       2)AWT的控件在不同的平台可能表现不同，而Swing在所有平台表现一致。
+       3)swing 是对awt 一种扩展。
