--- a/doc/01坦克第一个版本.md
+++ b/doc/01坦克第一个版本.md
@@ -46,8 +46,20 @@
             移出列表的内存泄漏问题，小心处理迭代器中的删除问题，
                 1：使用普通方式迭代 
                 2：在迭代过程中删除（iterator.remove）
-    10、
-    10、
+                
+        junit测试从硬盘上读取图片文件
+            绝对路径
+                ImageIO.read(new File("D:\bulletD.gi"));
+            classpath
+                ClassLoader().getResourceAsStream("bulletD.gif")
+                ImageIO.read(inputStream2)
+
+    11、换成图片版
+        坦克换成图片版
+        子弹换成图片
+            建立resMgr类管理资源，把图片load到内存，
+            
+    12、
     10、
     3、碰撞检测
         子弹击中坦克
