--- a/doc/02设计模式版坦克大战.md
+++ b/doc/02设计模式版坦克大战.md
@@ -38,12 +38,28 @@
     
     演化过程：
         1、Facade 对外
+            GameModel对Frame来说是Facade
+            
             抽象出GameModel，将Model和View分离
             同时，GameModel作为Facade，负责与Frame打交道，同时负责内部事务。
    
     
 #4、mediator 模式应用
     1、mediator 对内
+        GameModel对内部是mediator
+        
         抽象出GameObject，新物体的父类
+        
+        物体和物体的 碰撞 用gameobject 两两碰撞
+        其中碰撞策略，使用了策略模式
+        
+#5、责任链模式 应用
+    将碰撞策略串起来就是责任链模式。
+    作业：
+        1：colliders 写到配置文件
+        2：加新的游戏物体，墙，不需要修改原来任何一行代码
+        
+#6、责任链模式 应用
 
-#5、
+#6、责任链模式 应用
+#6、责任链模式 应用
