--- a/doc/02设计模式版坦克大战.md
+++ b/doc/02设计模式版坦克大战.md
@@ -59,7 +59,8 @@
         1：colliders 写到配置文件
         2：加新的游戏物体，墙，不需要修改原来任何一行代码
         
-#6、责任链模式 应用
-
-#6、责任链模式 应用
+#6、装饰器模式 应用
+    
+#7、observer 模式 应用
+    
 #6、责任链模式 应用
