--- a/doc/00课程简介.md
+++ b/doc/00课程简介.md
@@ -1,5 +1,5 @@
 #1、学习计划
-    坦克一期 + 坦克二期 + 设计模式 + 网络编程 + swing 大约有80个小时视频
+    坦克一期 + 设计模式 + 网络编程 + swing 大约有80个小时视频
     预计35天完成
     
     2020年 10.17开始，预计到2020年 11.20号学完
