--- a/doc/00课程简介.md
+++ b/doc/00课程简介.md
@@ -3,6 +3,7 @@
     预计35天完成
     
     2020年 10.17开始，预计到2020年 11.20号学完
+    2020年 11.20 刚好弄完
 #2、项目介绍
     设计知识点：
         netty server
@@ -10,10 +11,13 @@
         swing
         设计模式
 #3、作业
-    贪吃蛇，打飞机。泡泡堂。等小游戏。
+    贪吃蛇，
+    打飞机，
+    泡泡堂。
     
-#3、java 可以做成exe文件的
-
+#3、java 可以做成exe文件
+    会把jre打包进去
+    
 #4、java中AWT和SWing的区别与联系
     AWT的图形函数与操作系统提供的图形函数有着一一对应的关系。
     
@@ -28,3 +32,15 @@
        3)swing 是对awt 一种扩展。
 #5、shadowsocks
     翻墙软件
+    
+#6、需要完善的功能
+    加道具
+    登录功能
+    断线了自动重连
+    禁用TCP的nagle算法
+        tcp如果包特别小，会把小包合成一个大包，一块发出去。这样就不及时，有延迟。
+        对于游戏来说不适合。
+        netty禁用nagle
+        
+#7、推荐书籍
+    编码：隐匿在计算机软硬件背后的语言
